# agent-firewall

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  SECURITY.md  action.yml  pyproject.toml
.agents/rules/: agent-firewall.md
.cursor/rules/: agent-firewall.mdc
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: agent-integrations.md  api.md  architecture.md  cli.md  doctor.md  github-action.md  policy.md  releasing.md  rule-packs.md  threat-model.md
examples/: agent-firewall.policy.example.json  agent-firewall.rules.example.json  agent-session.jsonl  risky-agent-session.json  safe-agent-session.json
scripts/: check_version.py
src/agent_firewall/: __init__.py  analyzer.py  api.py  audit.py  audit_cli.py  baseline.py  cli.py  discovery.py  inputs.py  integrations.py  mcp_server.py  models.py  onboarding.py  policy.py  redaction.py  rulepack.py  sarif.py  watch.py
tests/: test_analyzer.py  test_api.py  test_audit.py  test_audit_cli.py  test_baseline.py  test_cli.py  test_github_action.py  test_inputs.py  test_integrations.py  test_mcp_server.py  test_onboarding.py  test_output_redaction.py  test_policy.py  test_rulepack.py  test_sarif.py  test_version.py
