[project]
name = "agent-firewall"
version = "0.1.0"
description = "Zero-config security firewall for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.136,<1",
  "mcp>=1.27,<2",
  "pydantic>=2.12,<3",
  "uvicorn[standard]>=0.38,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
]

[project.scripts]
agent-firewall-api = "agent_firewall.api:main"
agent-firewall-init = "agent_firewall.integrations:main"
agent-firewall-mcp = "agent_firewall.mcp_server:main"
agent-firewall-scan = "agent_firewall.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_firewall"]
